--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://hidden-refuge-74609.herokuapp.com",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
@@ -14,6 +13,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mongodb": "^3.5.7",
